...
                    MenuView(menuOptions: self.$menuOption, state: self.$state, data: self.$data, authenticator: self.$authenticator)
                        .frame(width: getSideBarWidth())
                    
                    // Middle View
                    ZStack {
                        ScrollView (.vertical, showsIndicators: false) {
                            HomeNavbarView(topLeftButtonView: "line.horizontal.3", topRightButtonView: "plus", titleString: "Your Bills", topLeftButtonAction: {
                                withAnimation (.spring()) {
                                    self.state = .SETTING
                                }
                            }, topRightButtonAction: {
                                withAnimation (.spring()) {
                                    self.showBillDetailSheet.toggle()
...
                                    }
                                    .frame(height: 0.6 * geo.size.height)
                                }
                                else {
                                    VStack {
                                        Spacer()
                                        Text("No Bills")
                                            .font(.system(.title2, design: .rounded))
                                            .fontWeight(.semibold)
                                            .foregroundColor(.gray)
                                        Spacer()
                                    }
                                    .frame(height: 0.6 * geo.size.height)
...
                            withAnimation(.spring()) {
                                self.editing = nil
                            }
                        }
                        .frame(height: geo.size.height)
                        
                        HomeBottomView(buttonText: "Calculate", secondaryButtonText: self.menuOption.hidePaid ? "Unhide Paid Bills" : "Hide Paid Bills", confirmFunc: {
                            withAnimation(.spring()) {
                                self.state = .SETTLE
                            }
                        }, secondaryFunc: {
                            withAnimation(.spring()) {
                                self.menuOption.hidePaid.toggle()
...
                    }
                    
                    
                    // Settle bill view
                    ScrollView (.vertical, showsIndicators: false) {
                        VStack {
                            HomeNavbarView(topLeftButtonView: "", topRightButtonView: "arrow.left", titleString: "Payment list", topLeftButtonAction: {}, topRightButtonAction: {
                                withAnimation(.spring()) {
                                    self.state = .HOME
                                }
                            })
                            Divider()
                                .padding(.horizontal)
...
                                    ForEach(Array(self.settleResult.keys), id: \.self) { key in
                                        SettleCardView(creditor: key, amount: self.data.getMemberTotal(member: key), debtors: self.settleResult[key]!, background: BubbleBackground())
                                            .clipShape(RoundedRectangle(cornerRadius: 20.0))
                                    }
                                }
                                if self.data.getUnpaidBills().count > 0 {
                                    NotificationBubble(message: "Mark \(self.data.getUnpaidBills().count) \(self.data.getUnpaidBills().count > 1 ? "bills" : "bill") as ", actionPrompt: "paid", action: {
                                        self.data.markAllBillsAsPaid()
                                    })
                                }
                            }
                            .padding()
                            Spacer()
...
