...
                            .padding(.vertical)
                    
                        TextField("Entry Title", text: self.$entryTitle)
                            .font(.title3)
                            .frame(maxWidth: .infinity, maxHeight: rowHeight)
                            .padding(.horizontal)
                            .accessibility(identifier: "titleTextField")
                    }
                    
                    RoundedRectangle(cornerRadius: tableCornerRadius, style: .circular)
                        .foregroundColor(Color(UIColor.systemBackground))
                        .frame(height: rowHeight)
                        .overlay(
...
                                        .cornerRadius(5.0)
                                }
                                Spacer()
                                TextField("required: 0.00", text: priceProxy)
                                    .font(.title3)
                                    .multilineTextAlignment(.trailing)
                                    .accessibility(identifier: "priceTextField")
                            }
                            .frame(height: rowHeight)
                            
                            Divider()
                                .padding(.leading, iconSize + 5)
                            
...
                                        .cornerRadius(5.0)
                                }
                                Spacer()
                                TextField("1", text: amountProxy)
                                    .font(.title3)
                                    .multilineTextAlignment(.trailing)
                                    .accessibility(identifier: "quantityTextField")
                            }
                            .frame(height: rowHeight)
                            
                            Divider()
                                .padding(.leading, iconSize + 5)
                            
...
                                        .resizable()
                                        .frame(width: iconSize, height: iconSize)
                                        .cornerRadius(5.0)
                                }
                            }
                            .frame(height: rowHeight)
                            .accessibility(identifier: "taxSwitch")
                            
                            if self.entryHasTax {
                                Divider()
                                    .padding(.leading, iconSize + 5)
                                HStack {
                                    Spacer()
...
                                    }
                                , trailing:
                                    Button(action: {
                                        commitChange()
                                        dismissView()
                                    }/*commitChange*/) {
                                        Text("Done")
                                            .fontWeight(.semibold)
                                    }
                                    .disabled(self.entryValue == nil || self.attendees.count == 0)
            )
            .navigationBarTitle(Text("Entry Details"), displayMode: .inline)
            .background(primaryBackgroundColor().ignoresSafeArea())
...
