...
                            self.authenticator.unlock()
                        } else {
                            self.authenticator.authenticate()
                        }
                    }) {
                        ZStack {
                            Text("Unlock")
                                .font(.system(.title3, design: .rounded))
                                .fontWeight(.semibold)
                                .foregroundColor(.gray)
                                .frame(width: 160, height: 50)
                                .background(BlurBackgroundView(style: .systemUltraThinMaterial)
                                                .clipShape(Capsule()))
...
